# capy

./: README.md  Taskfile.yml  main.py  pyproject.toml
av/: __init__.py  opencv.py  player.py
core/: __init__.py  meta.py
gui/: __init__.py  app.py  video.py
