[tool.poetry]
name = "capy"
version = "0.1.0"
description = ""
authors = ["cacko <alex@cacko.net>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.2"
opencv-python = "^4.5.3"
PyQt6 = "^6.1.1"
stringcase = "^1.2.0"
sounddevice = "^0.4.2"
black = "^21.7b0"
cffi = "^1.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
